Added animations and changed cart tile

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,9 +68,9 @@ flutter:
     - family: Montserrat
       fonts:
         - asset: assets/fonts/Montserrat-Regular.ttf
-    - family: DMSerif
+    - family: KaiseiHarunoUmi-Medium
       fonts:
-        - asset: assets/fonts/DMSerifDisplay-Regular.ttf
+        - asset: assets/fonts/KaiseiHarunoUmi-Medium.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
