--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cloud_firestore: ^2.5.1
   firebase_core: ^1.6.0
   provider: ^6.0.0
+  nil: ^1.1.1
 
 dev_dependencies:
   flutter_test:
